fix(global.css): wrong height for ant-anchor-link

--- a/apps/web/src/assets/styles/global.css
+++ b/apps/web/src/assets/styles/global.css
@@ -65,9 +65,11 @@ section {
     }
 }
 
+/* Ant Design Changes */
+
 .ant-anchor-link {
-    height: 63px;
-    line-height: 63px;
+    height: 64px;
+    line-height: 64px;
 }
 
 .ant-anchor-link a {
